--- a/src/components/feedpage/styles/FeedPage.module.css
+++ b/src/components/feedpage/styles/FeedPage.module.css
@@ -1,11 +1,26 @@
 /* FeedPage.module.css */
 .feedPage {
-    padding: 20px;
+    padding: 0;
   }
   
   .fileList {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    padding:20px;
   }
   
+  .logoutButton {
+    background-color: #ff4d4d;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+  }
+  
+  .logoutButton:hover {
+    background-color: #ff1a1a;
+  }
