--- a/src/components/adminUi/dashboard/AdminDashboard.module.css
+++ b/src/components/adminUi/dashboard/AdminDashboard.module.css
@@ -1,9 +1,14 @@
 .adminDashboard {
     padding: 20px;
-    max-width: 1200px;
+    width: 100vw;
     margin: 0 auto;
     display:flex;
     gap: 20px;
+    background:url('../../../assets/abstract.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin:0px;
   }
   
   .title {
